--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -45,5 +47,6 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWXOZWZ3If-gfNsmi16FVj8TLsqqzTCTY"></script>
 </body>
 </html>
