--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,48 @@
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>home</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-grid>
+    <ion-row>
+      <ion-col style="background-color: salmon">
+        <h1>PEMS</h1>
+      </ion-col>
+
+      <ion-col class="two" style="background-color: mediumorchid">
+       <h1> PMMS </h1>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col style="background-color: skyblue">
+        <h1>TPV'S</h1>
+      </ion-col>
+
+      <ion-col class="two" style="background-color: lightgreen">
+      <h1>INQUIRY</h1>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col (click)='trip()' class="fas fa-shuttle-van" style="background-color: tan">
+        <h1>Plan A Trip</h1>
+      </ion-col>
+
+      <ion-col class="two" style="background-color: rgb(182, 182, 5)">
+      <h1 style="font-size: 23px">ASSIGNMENT</h1>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
