Latest code on mac

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,9 +14,9 @@
 
 
 <ion-content padding>
-    
+    <!-- {{test}} -->
   <ion-list style="padding-top: 20%;">
-    <img src="/assets/imgs/dgme.png" alt="" style="height: 40%;width: 45%" class="center">
+    <img src="assets/imgs/dgme.png" alt="" style="height: 40%;width: 45%" class="center">
     <!-- <ion-item>
       <ion-label floating>Username</ion-label>
       <ion-input [(ngModel)]="user.name" type="text"></ion-input>
